--- a/README
+++ b/README
@@ -47,9 +47,6 @@ LICENSE AND COPYRIGHT
 
 Copyright (C) 2010 Oleksandr Tymoshenko
 
-This program is free software; you can redistribute it and/or modify it
-under the terms of either: the GNU General Public License as published
-by the Free Software Foundation; or the Artistic License.
-
-See http://dev.perl.org/licenses/ for more information.
-
+This module is free software; you can redistribute it and/or modify it 
+under the terms of the BSD license. See the LICENSE file included with 
+this distribution.
