Prepearing for release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
-Revision history for EBook-EPUB
+Revision history for EBook::EPUB
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+0.1     Thu 21 Jan 2010
+        - First version, released on an unsuspecting world.
 
